perbaikan change_password pada auth v1

--- a/app/views/the_mailer/forgot_password_link.html.erb
+++ b/app/views/the_mailer/forgot_password_link.html.erb
@@ -1,12 +1,18 @@
 <h1>Selamat datang pada aplikasi GOKIL</h1>
-<% if @app_type == 'mobile' %>
+<%
+=begin%>
+ <% if @app_type == 'mobile' %> 
+<%
+=end%>
   <p>
     Berikut adalah code untuk mereset password
   </p>
   <h1>
     <%= @user.pass_reset_token %>
   </h1>
-<% else %>
+<%
+=begin%>
+ <% else %>
   <p>
     Silahkan klik link berikut untuk melakukan reset password.
   </p>
@@ -21,7 +27,9 @@
     Link:
     <a href="<%= @link %>">link ini</a>
   </p>
-<% end %>
+<% end %> 
+<%
+=end%>
 
 <p>Selamat beraktivitas!</p>
 
