perbaikan body blash email

--- a/app/views/the_mailer/forgot_password_link.html.erb
+++ b/app/views/the_mailer/forgot_password_link.html.erb
@@ -1,4 +1,4 @@
-<h1>Selamat datang pada aplikasi GOKIL</h1>
+<h1>Selamat datang pada aplikasi Xaurius</h1>
 <%
 =begin%>
  <% if @app_type == 'mobile' %> 
@@ -35,7 +35,7 @@
 
 <p>
   Salam, <br>
-  Gokil (AppRobot)
+  Admin Xaurius
 </p>
 <hr>
 <p>Catatan: Abaikan pesan ini jika Anda merasa tidak pernah meminta reset password.</p>
