--- a/app/views/the_mailer/register.html.erb
+++ b/app/views/the_mailer/register.html.erb
@@ -2,7 +2,7 @@
   <div style="">
     <h2>Halo, <%= @orang.email %></h2>
     <p style="color: #847f7f; font-size: 16px">
-      Terimakasih telah mendaftar pada GOKIL Untuk dapat
+      Terimakasih telah mendaftar pada aplikasi Xaurius. Untuk dapat
       menggunakan aplikasi, Anda harus memverifikasi email dengan
       klik tombol dibawah ini:
     </p>
@@ -60,7 +60,7 @@
       </p>
 
       <p style="color: #847f7f; font-size: 16px; line-height: 30px">
-        Salam, <br />GOKIL (AppRobot)
+        Salam, <br />Admin Xaurius
       </p>
     </div>
   </div>
